# UDC-Model

./: .gitignore  CONVNEXT_INTEGRATION.md  README.md  SWEEP_README.md  cost_matrix_sweep.py  environment.yml  hpo_search.py  pyproject.toml  test_convnext_debug.py  train.py  train_test.py
config/: 2classSpiders.json  2classSpiders_reg.json  modelConfig.json  sweep_2class_bw_cost.json
model/: ResNet.py  __init__.py  convnext.py
scripts/: compare_sweeps.py  cost_matrix_sweep.py  hpo_search.py  train.py  train_reg.py
utils/: __init__.py  analyze_cost_matrix_results.py  datasetHFUpload.py  extract_metrics.py  image_processor.py  loss_functions.py  utils.py
