[project]
name = "udc-model"
version = "0.1.0"
description = "Cost-sensitive image classification with ResNet and ConvNeXt"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["model", "utils", "scripts"]
